--- a/layout/styles/layout.css
+++ b/layout/styles/layout.css
@@ -430,6 +430,9 @@ table a, #comments a{background-color:inherit;}
 
 /* Other
 ---------------------------------------------------------------------------------------------------------------------------------------*/
+.copyright_fontcolor{
+        color: #55ABDA;
+    }
 @media screen and (max-width:650px) {
 	.scrollable{display:block; width:100%; margin:0 0 30px 0; padding:0 0 15px 0; overflow:auto; overflow-x:scroll;}
 	.scrollable table{margin:0; padding:0; white-space:nowrap;}
